--- a/6-IndexersTests/IndexersTests.csproj
+++ b/6-IndexersTests/IndexersTests.csproj
@@ -12,6 +12,7 @@
     <Version>2.0.0</Version>
     <OutputType>Library</OutputType>
     <Nullable>disable</Nullable>
+    <StartupObject>Indexers.Prova</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
